More progress on moving to java parsing